<resources>
    <string name="app_name">CarePlus</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Daily Task List</string>
    <string name="menu_slideshow">Events</string>
    <string name="menu_addmember">Member</string>
    <string name="menu_location">Location</string>

    <string name="menu_rate">Rate us</string>
    <string name="menu_about">About us</string>
    <string name="menu_setting">Settings</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully..</string>
    <string name="sureToDeleteEvent">Are you sure you want to delete the event</string>
    <string name="sureToCompleteEvent">Are you sure you want to mark the event as completed</string>
    <string name="sureToDeleteMember">Are you sure you want to remove the member?</string>

</resources>